Closed Bug 831300 Opened 13 years ago Closed 13 years ago

Cannot build MailNews after mozilla-central Bug 786533.

Categories

(MailNews Core :: Backend, defect)

x86
Windows 7
defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED
Thunderbird 21.0

People

(Reporter: philip.chee, Assigned: philip.chee)

References

Details

https://tbpl.mozilla.org/php/getParsedLog.php?id=18843062&tree=Thunderbird-Try e:\builds\moz2_slave\tb-try-c-cen-w32\build\config\rules.mk:1113:0$ e:/builds/moz2_slave/tb-try-c-cen-w32/build/objdir-tb/_virtualenv/Scripts/python.exe -O e:/builds/moz2_slave/tb-try-c-cen-w32/build/mozilla/build/cl.py cl -FonsMsgIdentity.obj -c -D_HAS_EXCEPTIONS=0 -I../../../mozilla/dist/stl_wrappers -D_IMPL_NS_MSG_BASE -DZLIB_DLL -DMOZILLA_INTERNAL_API -D_IMPL_NS_COM -DEXPORT_XPT_API -DEXPORT_XPTC_API -D_IMPL_NS_GFX -D_IMPL_NS_WIDGET -DIMPL_XREAPI -DIMPL_NS_NET -DIMPL_THEBES -DZLIB_INTERNAL -DMOZ_THUNDERBIRD=1 -DOSTYPE=\"WINNT6.1\" -DOSARCH=WINNT -DNO_NSPR_10_SUPPORT -Ie:/builds/moz2_slave/tb-try-c-cen-w32/build/mailnews/base/util -I. -I../../../mozilla/dist/include -I../../../mozilla/dist/include/nsprpub -Ie:/builds/moz2_slave/tb-try-c-cen-w32/build/objdir-tb/mozilla/dist/include/nspr -Ie:/builds/moz2_slave/tb-try-c-cen-w32/build/objdir-tb/mozilla/dist/include/nss -TP -nologo -W3 -Gy -Fdgenerated.pdb -wd4345 -wd4351 -wd4800 -we4553 -GR- -DNOMINMAX -DNDEBUG -DTRIMMED -Zi -Zi -UDEBUG -DNDEBUG -O1 -Oy- -MD -FI ../../../comm-config.h -DMOZILLA_CLIENT e:/builds/moz2_slave/tb-try-c-cen-w32/build/mailnews/base/util/nsMsgIdentity.cpp nsMessengerWinIntegration.cpp e:\builds\moz2_slave\tb-try-c-cen-w32\build\objdir-tb\mozilla\dist\include\nsCoord.h(182) : error C2589: '(' : illegal token on right side of '::' e:\builds\moz2_slave\tb-try-c-cen-w32\build\objdir-tb\mozilla\dist\include\nsCoord.h(182) : error C2059: syntax error : '::' e:\builds\moz2_slave\tb-try-c-cen-w32\build\objdir-tb\mozilla\dist\include\nsCoord.h(241) : error C2589: '(' : illegal token on right side of '::' e:\builds\moz2_slave\tb-try-c-cen-w32\build\objdir-tb\mozilla\dist\include\nsCoord.h(241) : error C2059: syntax error : '::' e:\builds\moz2_slave\tb-try-c-cen-w32\build\objdir-tb\mozilla\dist\include\nsRect.h(128) : error C2589: '(' : illegal token on right side of '::' e:\builds\moz2_slave\tb-try-c-cen-w32\build\objdir-tb\mozilla\dist\include\nsRect.h(128) : error C2059: syntax error : '::' e:\builds\moz2_slave\tb-try-c-cen-w32\build\objdir-tb\mozilla\dist\include\nsRect.h(129) : error C2589: '(' : illegal token on right side of '::' e:\builds\moz2_slave\tb-try-c-cen-w32\build\objdir-tb\mozilla\dist\include\nsRect.h(129) : error C2059: syntax error : '::' e:\builds\moz2_slave\tb-try-c-cen-w32\build\objdir-tb\mozilla\dist\include\nsRect.h(133) : error C2589: '(' : illegal token on right side of '::' e:\builds\moz2_slave\tb-try-c-cen-w32\build\objdir-tb\mozilla\dist\include\nsRect.h(133) : error C2059: syntax error : '::' e:\builds\moz2_slave\tb-try-c-cen-w32\build\objdir-tb\mozilla\dist\include\nsRect.h(134) : error C2589: '(' : illegal token on right side of '::' e:\builds\moz2_slave\tb-try-c-cen-w32\build\objdir-tb\mozilla\dist\include\nsRect.h(134) : error C2059: syntax error : '::' e:\builds\moz2_slave\tb-try-c-cen-w32\build\objdir-tb\mozilla\dist\include\nsRect.h(141) : error C2589: '(' : illegal token on right side of '::' e:\builds\moz2_slave\tb-try-c-cen-w32\build\objdir-tb\mozilla\dist\include\nsRect.h(141) : error C2059: syntax error : '::' e:\builds\moz2_slave\tb-try-c-cen-w32\build\objdir-tb\mozilla\dist\include\nsRect.h(142) : error C2589: '(' : illegal token on right side of '::' e:\builds\moz2_slave\tb-try-c-cen-w32\build\objdir-tb\mozilla\dist\include\nsRect.h(142) : error C2059: syntax error : '::' e:\builds\moz2_slave\tb-try-c-cen-w32\build\objdir-tb\mozilla\dist\include\nsRect.h(146) : error C2589: '(' : illegal token on right side of '::' e:\builds\moz2_slave\tb-try-c-cen-w32\build\objdir-tb\mozilla\dist\include\nsRect.h(146) : error C2059: syntax error : '::' e:\builds\moz2_slave\tb-try-c-cen-w32\build\objdir-tb\mozilla\dist\include\nsRect.h(147) : error C2589: '(' : illegal token on right side of '::' e:\builds\moz2_slave\tb-try-c-cen-w32\build\objdir-tb\mozilla\dist\include\nsRect.h(147) : error C2059: syntax error : '::'
Status: ASSIGNED → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
Target Milestone: --- → Thunderbird 21.0
Thanks Philip. I'm a bit puzzled why this bustage happened though, because I made sure to have a green Thunderbird-Try before I pushed: https://tbpl.mozilla.org/?usebuildbot=1&tree=Thunderbird-Try&rev=7719c8c6221c
I think that Thunderbird builds are depends builds while SeaMonkey build boxes always CLOBBER before starting a new job.
You need to log in before you can comment on or make changes to this bug.