Bug 831300 - Cannot build MailNews after mozilla-central Bug 786533 rs=Standard8 r=bustage. Additional fix for comm-central/mailnews/

See Bug 786533 Replace NS_MIN/NS_MAX with std::min/std::max and #include <algorithm> where needed.